image cropper is working fine and some bug fixed

--- a/views/admin/categoryManagement.ejs
+++ b/views/admin/categoryManagement.ejs
@@ -110,7 +110,7 @@
             <% }) %>
 
               <% } else{%>
-                <td class="p-2">User Data Not Found</td>
+                <td class="p-2">Category Data Not Found</td>
                 <% } %>
 
       </tbody>
