implement in cropping in edit page and started product detail page

--- a/views/partials/user/footer.ejs
+++ b/views/partials/user/footer.ejs
@@ -48,7 +48,6 @@
 
   <!-- Bottom Bar -->
   <div class="mt-10 border-t border-gray-200 pt-4 text-center text-sm text-gray-500">
-    Copyright ©2025 All rights reserved | This template is made with 
-    <span class="text-pink-500">♥</span> by <a href="https://colorlib.com" class="text-orange-500 hover:underline">Colorlib</a>
+    Copyright ©2025 All rights reserved by Pawsome
   </div>
 </footer>
