--- a/views/layouts/adminLayout.ejs
+++ b/views/layouts/adminLayout.ejs
@@ -29,7 +29,7 @@
   </div>
 
   <!-- Main content -->
-  <main class="flex-1 p-6">
+  <main class="flex-1 p-6 max-w-6xl mx-auto" >
     <%- body %>
   </main>
 
