home page is completed

--- a/views/user/products.ejs
+++ b/views/user/products.ejs
@@ -9,7 +9,7 @@
           <!-- Search Input -->
           <input type="text" id="searchInput" name="search" placeholder="Search products..." value="<%= search %>"
             class="px-4 py-2 border border-gray-300 rounded-l-lg 
-                   focus:outline-none focus:ring-2 focus:ring-[#F9C22A] focus:border-[#F9C22A] w-80" />
+                   focus:outline-none focus:ring-2 focus:ring-gray-50 focus:border-[#F9C22A] w-80" />
 
           <!-- Search Button -->
           <button id="searchBtn" type="submit" class="group px-6 py-2 bg-[#F9C22A] text-gray-700 rounded-r-lg 
@@ -104,7 +104,7 @@
         <!-- Product Image -->
         <a href="/product/<%= product._id %>">
           <img class="p-6 rounded-t-lg h-48 w-full object-contain"
-            src="uploads/<%= product.images && product.images.length > 0 ? product.images[0] : '/default.jpg' %>"
+            src="/uploads/<%= product.images && product.images.length > 0 ? product.images[0] : '/default.jpg' %>"
             alt="<%= product.name %>" />
         </a>
 
@@ -156,7 +156,7 @@
         <% for (let i=1; i <=totalPages; i++) { %>
           <li>
             <a href="/products?page=<%= i %>&limit=<%= limit %>&search=<%= search %>&sort=<%= sort %>&category=<%= category %>&priceRange=<%= priceRange %>"
-              class="flex items-center justify-center px-4 h-10 leading-tight border <%= i === currentPage ? 'bg-yellow-500 text-white' : 'bg-white hover:bg-gray-100' %>">
+              class="flex items-center justify-center px-4 h-10 leading-tight border border-gray-100 <%= i === currentPage ? 'bg-yellow-500 text-white' : 'bg-white hover:bg-gray-100' %>">
               <%= i %>
             </a>
           </li>
