--- a/views/partials/user/navbar.ejs
+++ b/views/partials/user/navbar.ejs
@@ -12,7 +12,7 @@
         <ul class="flex space-x-8">
           <li><a href="/" class="text-gray-800 font-medium hover:text-[#F9C22A] transition-colors duration-300">Home</a></li>
           <li><a href="/products" class="text-gray-800 font-medium hover:text-[#F9C22A] transition-colors duration-300">Products</a></li>
-          <li><a href="#about" class="text-gray-800 font-medium hover:text-[#F9C22A] transition-colors duration-300">About</a></li>
+          <li><a href="#about_us" class="text-gray-800 font-medium hover:text-[#F9C22A] transition-colors duration-300 ">About</a></li>
           <li><a href="#contact" class="text-gray-800 font-medium hover:text-[#F9C22A] transition-colors duration-300">Contact</a></li>
         </ul>
       </nav>
